# Blop

./: .gitignore  AGENTS.md  AndroidWebView.qml  AuthOverlay.qml  BUILD_INSTRUCTIONS.md  BlopAsyncImageProvider.cpp  BlopAsyncImageProvider.h  BlopImageResponse.cpp  BlopImageResponse.h  CMakeLists.txt  InputPredictor.cpp  InputPredictor.h  Main.qml  Note.h  PageItem.h  SelectionMenuIcons.h  SettingsDialog.ui  StudyFlowView.qml  ToolMode.h  ToolSettings.h  TransformOverlay.h  UIStyles.h  UiProfile.h  androidicons.h  androidtiledelegate.cpp  blop_767.txt  blop_769.txt  blop_after_79_full.txt  blop_crash_after_72.txt  blop_crash_after_76.txt  blop_crash_buffer.txt  blop_crash_full.txt  blop_crash_pid.txt  blop_errcache_fresh.txt  blop_fail.txt  blop_fatal_71.txt  blop_main_after_76.txt  blop_main_system_events.txt  blop_next.txt  blop_observability.cpp  (+55 more)
.cursor/: environment.json
.devcontainer/: devcontainer.json
.github/workflows/: android_build.yml  automation_smoke.yml  windows_build.yml
StudyFlow/: .gitignore  app.py  audio_manager.py  auth_manager.py  check_models.py  cleanup_app.py  data_manager.py  intro_preview.html  migrate_local_to_firestore.py  probe.py  probe_minimal.py  render.yaml  requirements.txt  secrets.toml.template  test_mime.py  verify_image_gen.py  verify_new_genai.py  workspace.code-workspace
StudyFlow/.streamlit/: config.toml  secrets.toml
StudyFlow/backend/: .env.example  Dockerfile  LERNVIDEO_OPS.md  UPTIMEROBOT.md  ai_service.py  auth_manager.py  cleanup_db.py  data_manager.py  email_notify.py  genai_warnings.py  main.py  marketing_pack.py  media_pipeline.py  requirements.txt  study_slide_render.py  supabase_schema.sql  test_signed_sessions.py
StudyFlow/backend/docs/: DEPLOY_SHARE_TABLES.md
StudyFlow/backend/migrations/: 001_add_folders_ai_context_file_ids.sql  002_create_share_tables.sql
StudyFlow/backend/scripts/: apply_share_tables.ps1
StudyFlow/backend/supabase/migrations/: 20260402120000_ai_background_jobs.sql  20260501130000_share_requests_and_links.sql
StudyFlow/frontend/: next.config.ts  package-lock.json  package.json  vercel.json
StudyFlow/frontend/src/app/: globals.css  layout.tsx  page.tsx
StudyFlow/frontend/src/app/admin/: page.tsx
StudyFlow/frontend/src/app/chat/: page.tsx
StudyFlow/frontend/src/app/datenschutz/: layout.tsx  page.tsx
StudyFlow/frontend/src/app/flashcards/: page.tsx
StudyFlow/frontend/src/app/login/: layout.tsx  page.tsx
StudyFlow/frontend/src/app/native-smoke/: page.tsx
StudyFlow/frontend/src/app/plans/: page.tsx
StudyFlow/frontend/src/app/settings/: page.tsx
StudyFlow/frontend/src/components/: AuthCheck.tsx  ClientLayout.tsx  CommandMenu.tsx  FloatingChat.tsx  GlobalQueueStatus.tsx  MobileNav.tsx  RichTextEditor.tsx  Sidebar.tsx
StudyFlow/frontend/src/constants/: overlayLayout.ts
StudyFlow/frontend/src/lib/: aiJobAbortRegistry.ts  api.ts  globalQueueStorage.ts  htmlToMarkdownExport.ts  nativeSession.ts
StudyFlow/marketing-hub/: .gitignore  middleware.ts  package-lock.json
StudyFlow/marketing-hub/src/app/: globals.css  layout.tsx
StudyFlow/marketing-hub/src/app/login/: page.tsx
StudyFlow/marketing-hub/src/components/: DashboardShell.tsx  LoginForm.tsx  PackPanel.tsx  UploadPanel.tsx
StudyFlow/marketing-hub/src/lib/: auth.ts  constants.ts
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/res/drawable/: ic_launcher_blop.xml
android/res/values/: libs.xml  strings.xml  styles.xml
android/res/xml/: network_security_config.xml
benchmarks/: CMakeLists.txt  benchmark_math.cpp
cmake/: blop_sentry.cmake
control-center/: README.md  smoke_local.py
control-center/app/: __init__.py  main.py
control-center/static/: app.js  index.html  styles.css
docs/: ADR-observability.md  agentic-automation.md
scripts/: cloud-agent-install.sh  export_math_ocr_model.py  simulate_oauth_redirect.py
scripts/ci/: build_android_curl_mbedtls.sh
src/android/: androidcontentpicker.cpp  androidcontentpicker.h  androidicons.cpp  androidtiledelegate.cpp  androidtiledelegate.h
src/auth/: googleauthmanager.cpp  googleauthmanager.h
src/core/: Note.h  PageItem.h  SelectionMenuIcons.h  ToolSettings.h  UIStyles.cpp  UIStyles.h  noteeditor.cpp  noteeditor.h  notemanager.cpp  pagemanager.cpp  pagemanager.h  uiprofile.h  uiprofilemanager.cpp  uiprofilemanager.h
src/imageprovider/: BlopAsyncImageProvider.cpp  BlopImageResponse.cpp  BlopImageResponse.h
src/observability/: blop_crash_backend.cpp  blop_crash_backend.h  blop_diag.cpp  blop_diag.h  blop_observability.h  blop_observability_build.h.in
src/ui/: SettingsDialog.ui  allpagesoverlay.cpp  allpagesoverlay.h  androidphonetoolbar.cpp  androidphonetoolbar.h  bloommenu.cpp  bloommenu.h  blop_dialogs.cpp  blop_dialogs.h  blop_inwindow_menu.cpp  blop_inwindow_menu.h  blop_modal.cpp  blop_modal.h  blop_theme.cpp  blop_theme.h  blopripple.cpp  blopripple.h  blopstyle.cpp  blopstyle.h  canvasview.cpp  canvasview.h  cloudstoragestore.cpp  cloudstoragestore.h  croptools.cpp  croptools.h  documenttabbar.cpp  documenttabbar.h  editoroverlays.cpp  editoroverlays.h  freegridview.cpp  freegridview.h  graphaxissettingsdialog.cpp  graphlegenddock.cpp  graphlegenddock.h  graphquickactionpopup.cpp  graphquickactionpopup.h  introscreen.cpp  libraryorgbar.cpp  libraryorgbar.h  libraryorgstore.cpp  (+39 more)
src/util/: uiscale.cpp  uiscale.h
tools/: AbstractStrokeTool.h  AbstractTool.h  EraserTool.h  GraphCanvasItem.cpp  GraphCanvasItem.h  GraphFormulaZone.cpp  GraphFormulaZone.h  HandTool.h  ImageTool.h  LassoTool.h  RulerItem.h  RulerTool.h  ShapeTool.h  StickyNoteTool.h  StrokeItem.h  TextTool.h  ToolFactory.h  ToolManager.cpp  ToolManager.h  ToolUIBridge.h  WritingTools.h  smoke_note_shortcuts.sh
tools/math/: LatexToBlopConverter.cpp  LatexToBlopConverter.h  MathEvaluator.cpp  MathEvaluator.h  MathExpressionParser.cpp  MathExpressionParser.h  MathInkRecognizer.cpp  MathInkRecognizer.h  MathTypes.h  NumericAnalysis.cpp  NumericAnalysis.h
ui/: ToolSettingsOverlay.qml
util/: Async.h
(+14 files in other folders)
